# defect_recognition

./: .gitignore  LICENSE  README.md  cut.py  imageStitchingYT.py  main.py  st1.py  sti.py  stitching_copy.py  stitchinga.py  stitchingcopy.py  Задание.txt  НикитинДА_ВКР_КТбо4-2.docx
VKR/: url.txt
designing/: UX.txt
designing/diagrams/: UseCase.plantuml
diagrams/: UseCase.plantuml
project/detection_on_PCB/: CMakeLists.txt  camerasettings.cpp  camerasettings.h  camerasettings.ui  createproject.cpp  createproject.h  createproject.ui  filebrowser.cpp  filebrowser.h  filebrowser.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  openproject.cpp  openproject.h  openproject.ui
project/test_images/: kaggle_url.txt
project_python/: ebb_motion.py  main.py  settings.py  st.py  stitch.py  util.py  vc.py
project_python/microcontroller/: ebb_motion.py
python test/: ebb_motion.py  ebb_serial_my.py  main.py  util.py
test_tkinter_form/: file_browser.py  menubar.py  more_windows.py  notebook.py  test.ino  test.py  test1.py
